ACLOCAL_AMFLAGS=-I m4

SUBDIRS = src .

EXTRA_DIST = \
	rcssmonitor.pro \
	README.md \
	CMakeLists.txt \
	icons/accelerate.xpm \
	icons/blank.xpm \
	icons/decelerate.xpm \
	icons/ff.xpm \
	icons/go.xpm \
	icons/live.xpm \
	icons/minus.xpm \
	icons/next_score.xpm \
	icons/open.xpm \
	icons/play.xpm \
	icons/plus.xpm \
	icons/prev_score.xpm \
	icons/quit.xpm \
	icons/rcss.icns \
	icons/rcss.ico \
	icons/rcss.xpm \
	icons/rec.xpm \
	icons/rev.xpm \
	icons/rew.xpm \
	icons/stop.xpm

CLEANFILES = *~
