## Process this file with automake to produce Makefile.in

bin_PROGRAMS = rcssmonitor

rcssmonitor_SOURCES = \
	rcsslogplayer/parser.cpp \
	rcsslogplayer/types.cpp \
	rcsslogplayer/util.cpp \
	angle_deg.cpp \
	ball_painter.cpp \
	circle_2d.cpp \
	config_dialog.cpp \
	disp_holder.cpp \
	draw_info_painter.cpp \
	field_canvas.cpp \
	field_painter.cpp \
	line_2d.cpp \
	log_player.cpp \
	main_window.cpp \
	monitor_client.cpp \
	options.cpp \
	player_painter.cpp \
	player_type_dialog.cpp \
	score_board_painter.cpp \
	team_graphic.cpp \
	team_graphic_painter.cpp \
	vector_2d.cpp \
	main.cpp

nodist_rcssmonitor_SOURCES = \
	moc_config_dialog.cpp \
	moc_field_canvas.cpp \
	moc_log_player.cpp \
	moc_main_window.cpp \
	moc_monitor_client.cpp \
	moc_player_type_dialog.cpp

noinst_HEADERS = \
	rcsslogplayer/handler.h \
	rcsslogplayer/parser.h \
	rcsslogplayer/types.h \
	rcsslogplayer/util.h \
	angle_deg.h \
	ball_painter.h \
	circle_2d.h \
	config_dialog.h \
	disp_holder.h \
	draw_info_painter.h \
	field_canvas.h \
	field_painter.h \
	line_2d.h \
	log_player.h \
	main_window.h \
	monitor_client.h \
	mouse_state.h \
	options.h \
	painter_interface.h \
	player_painter.h \
	player_type_dialog.h \
	score_board_painter.h \
	team_graphic.h \
	team_graphic_painter.h \
	vector_2d.h


rcssmonitor_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src $(QT4_CPPFLAGS)
rcssmonitor_CXXFLAGS = -W -Wall $(QT4_CXXFLAGS)
rcssmonitor_LDFLAGS = $(QT4_LDFLAGS)
rcssmonitor_LDADD = $(BOOST_PROGRAM_OPTIONS_LIB) $(QT4_LDADD)

# source files from headers generated by Meta Object Compiler
moc_%.cpp: %.h
	$(QT4_MOC) $< -o $@

# rule to generate tranlation files
##%.qm: %.ts
##	$(QT4_LRELEASE) $< -qm $@

AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDFLAGS =

EXTRA_DIST = \
	rcssmonitor.rc \
	src.pro

CLEANFILES = $(nodist_rcssmonitor_SOURCES) *~
