## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = rcssmonitor

rcssmonitor_SOURCES = \
	gzfstream.cpp \
	angle_deg.cpp \
	ball_painter.cpp \
	circle_2d.cpp \
	config_dialog.cpp \
	disp_holder.cpp \
	draw_info_painter.cpp \
	field_canvas.cpp \
	field_painter.cpp \
	line_2d.cpp \
	log_player.cpp \
	log_player_slider.cpp \
	main_window.cpp \
	monitor_client.cpp \
	options.cpp \
	player_painter.cpp \
	player_type_dialog.cpp \
	rcg_handler.cpp \
	score_board_painter.cpp \
	team_graphic.cpp \
	team_graphic_painter.cpp \
	vector_2d.cpp \
	main.cpp

nodist_rcssmonitor_SOURCES = \
	moc_config_dialog.cpp \
	moc_field_canvas.cpp \
	moc_log_player.cpp \
	moc_log_player_slider.cpp \
	moc_main_window.cpp \
	moc_monitor_client.cpp \
	moc_player_type_dialog.cpp

noinst_HEADERS = \
	gzfstream.h \
	angle_deg.h \
	ball_painter.h \
	circle_2d.h \
	config_dialog.h \
	disp_holder.h \
	draw_info_painter.h \
	field_canvas.h \
	field_painter.h \
	line_2d.h \
	log_player.h \
	log_player_slider.h \
	main_window.h \
	monitor_client.h \
	mouse_state.h \
	options.h \
	painter_interface.h \
	player_painter.h \
	player_type_dialog.h \
	rcg_handler.h \
	score_board_painter.h \
	team_graphic.h \
	team_graphic_painter.h \
	vector_2d.h


rcssmonitor_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src $(QT_CPPFLAGS)
rcssmonitor_CXXFLAGS =  $(QT_CXXFLAGS) -W -Wall
rcssmonitor_LDFLAGS = -L$(top_builddir)/rcss/rcg $(QT_LDFLAGS)
rcssmonitor_LDADD = -lrcssrcg $(QT_LIBS)

# source files from headers generated by Meta Object Compiler
moc_%.cpp: %.h
	$(QT_MOC) $< -o $@

# rule to generate tranlation files
##%.qm: %.ts
##	$(QT_LRELEASE) $< -qm $@

AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDFLAGS =

EXTRA_DIST = \
	CMakeLists.txt

CLEANFILES = $(nodist_rcssmonitor_SOURCES) *~
